# parascribe

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml  requirements-dev.txt  requirements-diarization.txt  requirements.txt
specs/: OVERVIEW.md
specs/multi-model-registry/: spec.md
src/parascribe/: align.py  asr.py  config.py  diarize.py  fetch.py  main.py  media.py  registry.py  stitch.py
tests/: test_align.py  test_api.py  test_config.py  test_fetch.py  test_media.py  test_registry.py  test_stitch.py
