[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parascribe"
version = "0.1.0"
description = "OpenAI-compatible Parakeet ASR server with GPU timestamps, behind LiteLLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Dependencies are managed via the pinned requirements*.txt files (venv + pip),
# not via this table, so the onnxruntime CPU/GPU split stays explicit.

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "scripts"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "gpu: integration tests that require a CUDA GPU (skipped if absent)",
]
